중첩if논리연산자

--- a/data/js4-구매수량제한.html
+++ b/data/js4-구매수량제한.html
@@ -14,5 +14,33 @@
     <p style="margin-top:50px;">총 수량 <span id="number">0</span>개</p>
     <p>총 가격 <span id="result">0</span>원</p>
     <p><button type="button" id="reset">X</button></p>
+    <!-- script 작성순서 -->
+    <!-- 
+        1.주문하기 버튼 1번 클릭할 때 마다 수량 증가하기
+        2.수량에 따른 가격 출력하기 (1잔당 4800원)
+        3.X버튼 클릭 시 모든 수량, 가격 0으로 초기화하기
+    -->
+    <script>
+        const order = document.querySelector('#order')
+        const number = document.querySelector('#number')
+        const result = document.querySelector('#result')
+        const reset = document.querySelector('#reset')
+        let num = 0//수량 데이터변수
+        let price = 4800 //가격 데이터변수
+        let total = 0 //최종가격
+        console.log(order, number, result, reset)
+        order.addEventListener('click',function(){
+            num++ //수량 데이터 변수 1증가
+            number.innerHTML = num //수량표시변수에 데이터대입
+            total = price*num
+            result.innerHTML = total.toLocaleString('ko-kr')
+            // result.innerHTML = price*num.toLocaleString('ko-kr') 이 경우에 toLocaleString 적용 불가
+        })
+        reset.addEventListener('click',function(){//초기화
+            num = 0
+            number.innerHTML = num
+            result.innerHTML = 0 //total은 num의 값에 따라 달라지기 때문에 변경하지 않아도 됨
+        })
+    </script>
 </body>
 </html>
