--- a/data/js5-네이버로그인_보안인증.html
+++ b/data/js5-네이버로그인_보안인증.html
@@ -43,5 +43,30 @@
             </fieldset>
         </form>
     </div>
+    <script>
+        const userId = document.querySelector('#user_id')
+        const userPw = document.querySelector('#user_pw')
+        const result = document.querySelector('#error_result')
+        const loginBtn = document.querySelector('#login_btn')
+        console.log(userId, userPw, result, loginBtn)
+        //네이버 로그인 조건
+        /*
+            1.아이디 안적고 비밀번호 적은 후 로그인버튼 클릭시 = 아이디 오류
+            2.아이디 적고 비밀번호 안적고 로그인버튼 클릭시 = 비밀번호 오류
+            3.아이디, 비밀번호 모두 안적고 로그인버튼 클릭시 = 아이디,비밀번호 입력하세요
+            4.아이디, 비밀번호 모두 입력하고 로그인버튼 클릭 시 = 로그인 성공
+        */
+            loginBtn.addEventListener('click',function(){
+                if(userId.value === '' && userPw.value ===''){
+                    result.innerHTML = '아이디, 비밀번호 입력하세요'
+                }else if(userId.value ===''){
+                    result.innerHTML = '아이디 오류'
+                }else if(userPw.value === ''){
+                    result.innerHTML = '비밀번호 오류'
+                }else{
+                    result.innerHTML = '로그인 성공'
+                }
+            })
+    </script>
 </body>
 </html>
